# assignmenttracker

./: .env  .gitignore  native_ui.py  pyproject.toml
.github/workflows/: build-deploy.yml
.jetclient/: jetclient.md
.jetclient/Authentication/: Login User.md  _folder.md
.jetclient/Tasks/: Complete A Task.md  Create A Task.md  Delete A Task.md  Get All Tasks.md  Get Task By ID.md  _folder.md
.jetclient/Users/: Create A User.md  Get User By ID.md  _folder.md
alembic/: env.py
alembic/versions/: 5b5a4405f14f_initial.py  d12647097c57_initial_migration.py  f5956df24345_initial_revision.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py  vote_manager.py
app/routers/: auth.py  post.py  task.py  user.py  vote.py
tests/: conftest.py  test_01_user.py  test_02_auth.py  test_03_post.py  test_03_task.py  test_04_vote.py  test_user.py
